product json  in html

--- a/Template/index.html
+++ b/Template/index.html
@@ -45,7 +45,7 @@
 
           .page-content {
                padding: 20px;
-               background-color: #f9f9f9;
+               background-color: #656060;
                border: 1px solid #ddd;
           }
 
@@ -59,7 +59,7 @@
      <div class="container">
           <div class="navbar">
                <a href="Home">Home</a>
-               <a href="Product">Product</a>
+               <a href="Products">Products</a>
                <a href="About">About</a>
                <a href="Contact">Contact</a>
           </div>
